# liosam

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSES.md  README.md  ROADMAP.md
docs/: FAQ.md  (+6 more)
src/bag_route_replay/: CMakeLists.txt  README.md  package.xml
src/bag_route_replay/launch/: replay_from_bag.launch
src/bag_route_replay/scripts/: bag_route_replay_node.py
src/continuous_navigation/: CMakeLists.txt  README.md  package.xml
src/continuous_navigation/config/: manual_waypoints.yaml  waypoints.yaml  waypoints_from_bag.yaml
src/continuous_navigation/launch/: simple_two_points_navigator.launch  waypoint_navigator.launch
src/continuous_navigation/src/: simple_two_points_navigator.cpp  waypoint_navigator.cpp  waypoint_navigator_node.cpp
src/lidar_vision_detection/: CMakeLists.txt  INTEGRATION.md  README.md  SETUP.md  package.xml
src/lidar_vision_detection/docs/: architecture.txt
src/lidar_vision_detection/launch/: demo.launch  integration_with_liosam.launch  vision_detection.launch
src/lidar_vision_detection/models/: README.txt
src/lidar_vision_detection/msg/: DetectedObject.msg  DetectedObjectArray.msg
src/lidar_vision_detection/rviz/: detection_visualization.rviz
src/lidar_vision_detection/scripts/: detection_subscriber_example.py
src/lidar_vision_detection/src/: vision_detection_node.cpp  vision_detector.cpp  visualization.cpp
src/liosam_bringup/: CMakeLists.txt  README.md  package.xml
src/liosam_bringup/launch/: orchard_sim_headless.launch  smoke.launch
src/liosam_bringup/src/: smoke_node.cpp
src/orchard_corridor/: CMakeLists.txt  README.md  package.xml
src/orchard_corridor/config/: bev_occupancy.yaml  bev_occupancy_sim.yaml  boundary_from_centerline.yaml  centerline.yaml  centerline_sim_routebias.yaml  controller.yaml  controller_sim_fast.yaml  debug_export.yaml  pointcloud_preprocess.yaml  pointcloud_preprocess_sim.yaml  pointcloud_preprocess_sim_wide.yaml  route_id_gate.yaml
src/orchard_corridor/launch/: debug_stage1.launch  debug_stage2.launch  debug_stage3.launch  debug_stage4.launch  debug_stage5.launch  debug_stage6.launch
src/orchard_corridor/rviz/: debug_stage1.rviz  debug_stage2.rviz  debug_stage3.rviz  debug_stage6.rviz
src/orchard_corridor/scripts/: analyze_turns_on_bag.py  bev_occupancy_node.py  boundary_from_centerline_node.py  centerline_node.py  cmd_vel_mux_node.py  controller_node.py  debug_export_node.py  pointcloud_preprocess_node.py  route_id_gate_node.py
src/orchard_nn_scancontext/: CMakeLists.txt  README.md  package.xml  setup.py
src/orchard_nn_scancontext/launch/: nn_scancontext.launch
src/orchard_nn_scancontext/orchard_nn_scancontext/: __init__.py  cnn_2d_models.py  sc_route_db.py  scan_context.py
src/orchard_nn_scancontext/scripts/: build_sc_route_db.py  eval_route_id_on_bag.py  eval_stage4_gate_on_csv.py  nn_scancontext_node.py  plot_route_id_eval_svg.py  sc_route_id_node.py  sweep_stage4_gate_conf_th.py  train_route_id_cnn_on_bag.py
src/orchard_nn_scancontext/test/: test_nn_scancontext_offline.py  test_sc_route_db.py
src/orchard_row_mapping/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
src/orchard_row_mapping/config/: default.yaml  liorf_pretty.yaml  liorl_pretty.yaml  liorl_prior.yaml  liorl_tree_map.yaml  liorl_tree_map_fast.yaml  liorl_tree_prior.yaml  orchard_row_mapping.rviz  row_model_pca_major.json
src/orchard_row_mapping/launch/: orchard_row_liorl_pretty.launch  orchard_row_mapping.launch  orchard_row_prior.launch  orchard_tree_circles.launch  orchard_tree_map_liorl.launch  orchard_viz.launch  pcd_publisher.launch
src/orchard_row_mapping/scripts/: orchard_row_prior_node.py  orchard_segmentation_node.py  orchard_tree_circles_node.py  orchard_tree_clusters_node.py  orchard_tree_map_builder_node.py  pcd_publisher_node.py
src/orchard_row_mapping/tools/: accumulate_pcd_frames.py  cluster_tree_frames_variants.py  clustered_frames_to_circles_bev.py  compare_bev_runs_montage.py  compare_row_fits_to_manual.py  draw_manual_prior_cv2.py  evaluate_bev_circle_runs.py  export_bag_to_pcd_frames.py  export_points_raw_map_pcd.py  extract_manual_prior_lines.py  fit_row_model_from_bev_run.py  pcd_quicklook.py  pcd_to_tree_circles.py  raw_frames_to_map_pcd_chunks.py  render_bev_sequence.py  render_bev_sequence_ego_png.py  render_bev_sequence_points_raw.py  render_bev_svg.py  run_bag_export_chain.py  segment_bag_to_colored_pcd.py  segment_bag_to_tree_pcd.py  select_typical_segments.py  tree_circles_ablation.py  tree_frames_to_circles_bev.py  tree_frames_to_map_pcd_chunks.py
src/orchard_scancontext_fsm/: CMakeLists.txt  README.md  package.xml  setup.py
src/orchard_scancontext_fsm/launch/: ch5_from_bag.launch  scancontext_fsm.launch
src/orchard_scancontext_fsm/orchard_scancontext_fsm/: __init__.py  scancontext.py
src/orchard_scancontext_fsm/scripts/: annotate_bag_with_fsm_mode.py  build_scancontext_db.py  scancontext_fsm_node.py
src/orchard_teb_mode_switcher/: CMakeLists.txt  README.md  package.xml
src/orchard_teb_mode_switcher/launch/: teb_mode_switcher.launch
src/orchard_teb_mode_switcher/scripts/: teb_mode_switcher_node.py
src/orchard_tree_tracker/: CMakeLists.txt  README.md  package.xml
src/orchard_tree_tracker/launch/: fruit_tree_tracker.launch  fruit_tree_tracker_replay.launch  tree_row_fit.launch  tree_row_fit_replay.launch
src/orchard_tree_tracker/scripts/: fruit_tree_tracker_node.py  tree_row_fit_node.py
src/orchard_tree_tracker/test/: test_pointcloud2_parsing.py  test_tracker_core.py
src/pcd_gazebo_world/: CMakeLists.txt  README.md  package.xml
src/pcd_gazebo_world/config/: orchard_costmap_common_no_obstacles.yaml  orchard_costmap_common_static.yaml  orchard_costmap_common_velodyne.yaml  orchard_trajectory_planner_dwa.yaml  teb_via_points_override.yaml
src/pcd_gazebo_world/launch/: gazebo.launch  orchard_dwa_replay.launch  orchard_hybrid_replay.launch  orchard_lqr_replay_map.launch  orchard_pcd_sim.launch  orchard_pid_replay.launch  orchard_pid_replay_map.launch  (+5 more)
src/slope_costmap_layer/: CMakeLists.txt  package.xml  slope_costmap_layer_plugin.xml
(+247 files in other folders)
