<?xml version="1.0"?>
<package format="2">
  <name>slope_costmap_layer</name>
  <version>0.0.1</version>
  <description>The slope_costmap_layer package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>grid_map_pcl</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>grid_map_pcl</build_export_depend>
  <build_export_depend>grid_map_ros</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>grid_map_pcl</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <costmap_2d plugin="${prefix}/slope_costmap_layer_plugin.xml" />
  </export>
</package>
